# SecFix

./: .env.example  README.md  pyproject.toml  requirements.txt
samples/: api.js  login.py  upload.php
secfix/: __init__.py  agent.py  cache.py  cli.py  config.py  index.py  llm.py  mcp_server.py  patch.py  prompts.py  report.py  scan.py  web.py
tests/: __init__.py  stub.py  test_index.py  test_llm.py  test_pipeline.py  test_web.py
